--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.13.2",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@veramo/core": "^5.1.2",
@@ -13,6 +14,7 @@
     "@veramo/data-store": "^5.1.2",
     "@veramo/did-manager": "^5.1.2",
     "@veramo/did-provider-ethr": "^5.1.2",
+    "@veramo/did-provider-key": "^6.0.0",
     "@veramo/did-provider-web": "^5.1.2",
     "@veramo/did-resolver": "^5.1.2",
     "@veramo/key-manager": "^5.1.2",
